# rust_server

./: .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.ci  Dockerfile.db-init  Dockerfile.migrate  Dockerfile.postgres  Dockerfile.rust  Makefile  README.md  compose.yaml  dbinit.sh  dbseed.sh  docker-compose.yml  task-definition-app.json  task-definition-app.template.json  task-definition-db-init.template.json  task-definition-migrate.template.json  task-definition-seed.template.json
.github/workflows/: build.yml  lint.yaml  lint.yml  test.yaml  test.yml
migrations/: 20200417000001_create_users.up.sql  20200417000201_create_groups.up.sql  20200417000301_create_group_users.up.sql  20200516000001_create_profiles.up.sql  20200729000001_create_tags.up.sql  20200801000001_create_bank_account.up.sql  20200801100001_create_brokerage_account.up.sql  20200802000001_create_portfolio.up.sql  20200803000001_create_portfolio_tags.up.sql  20220101000001_create_bank_transfer.up.sql  20220218000001_create_securities.up.sql  20220218000002_create_security_tags.up.sql  20220222000001_create_orders.up.sql  20220222000011_create_assets.up.sql  20220329000001_create_invoices.up.sql  20220330000001_create_items.up.sql  20221003000001_create_points.up.sql  20221004000001_create_posts.up.sql  20221005000001_create_user_posts.up.sql
seeders/: tags.sh
seeders/development/: 20220102_brokerage_accounts.sql  20220103_bank_accounts.sql  20220114_tags.sql  20220116_securities.sql  20220117_security_tags.sql  20240101000000_users.up.sql  20241001000000_groups.up.sql
src/: auth0.rs  auth0_test.rs  authentication.rs  banking.rs  banking_test.rs  captcha.rs  captcha_test.rs  errors.rs  gov.rs  gov_test.rs  handlers.rs  handlers_actix.rs  linked_in.rs  linked_in_test.rs  main.rs  models.rs  plaid.rs  plaid_test.rs  services.rs  services_test.rs  test_utils.rs  utils.rs
src/authentication/: authentication.rs
src/authorization/: _user.polar  mod.rs  oso.rs  oso_test.rs  user.polar
src/errors/: errors.rs
src/extractors/: claims.rs
src/handlers/: authentication.rs  authorization.rs  balances.rs  bank_accounts.rs  bank_accounts_test.rs  bank_transfers.rs  bank_transfers_test.rs  group_users.rs  group_users_test.rs  groups.rs  groups_test.rs  health.rs  health_test.rs  orders.rs  plaid.rs  plaid_test.rs  points.rs  points_test.rs  portfolio_recommendations.rs  portfolio_tags.rs  portfolios.rs  posts.rs  posts_test.rs  profiles.rs  routes.rs  tags.rs  user_posts.rs  user_posts_test.rs  users.rs  users_test.rs
src/handlers_actix/: group_users.rs  group_users_test.rs  groups.rs  groups_test.rs  users.rs  users_test.rs
src/middlewares/: authentication.rs
src/models/: bank_account.rs  bank_transfer.rs  group.rs  group_user.rs  order.rs  point.rs  portfolio.rs  portfolio_tag.rs  post.rs  security.rs  security_tag.rs  tag.rs  user.rs  user_post.rs
