[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-service = "2"
actix-cors = "0.6.4"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
sea-orm = { version = "0.10", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-uuid", "macros", "mock" ], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = "1.2.2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.13", features = ["blocking", "json", "cookies"] }
regex = "1"
actix-web-httpauth = "0.8.0"
derive_more = "0.99.17"
jsonwebtoken = "8.2.0"
async-trait = "0.1.60"
mockall = "0.11.3"
futures-util = "0.3.25"
anyhow = { version = "1.0.68", features = ["backtrace"] }
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
async-mutex = "1.4.0"
scraper = "0.14.0"
