[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
actix-service = "2"
actix-cors = "0.6.5"
dotenv = "0.15.0"
env_logger = "0.10.2"
log = "0.4.21"
sea-orm = { version = "0.10", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-uuid", "macros", "mock" ], default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
uuid = "1.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.11.27", features = ["blocking", "json", "cookies"] }
regex = "1"
oso = "0.26.4"
actix-web-httpauth = "0.8.1"
derive_more = "0.99.17"
jsonwebtoken = "8.3.0"
async-trait = "0.1.80"
mockall = "0.11.4"
futures-util = "0.3.30"
anyhow = { version = "1.0.86", features = ["backtrace"] }
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
async-mutex = "1.4.0"
scraper = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
