[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-service = "2"
actix-cors = "0.6.5"
dotenv = "0.15.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-uuid", "macros", "mock" ], default-features = false }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.11.27", features = ["blocking", "json", "cookies"] }
regex = "1"
oso = "0.26.4"
actix-web-httpauth = "0.8.2"
derive_more = "0.99.18"
jsonwebtoken = "8.3.0"
async-trait = "0.1.83"
mockall = "0.11.4"
futures-util = "0.3.31"
anyhow = { version = "1.0.91", features = ["backtrace"] }
thiserror = "1.0.65"
tokio = { version = "1", features = ["full"] }
async-mutex = "1.4.0"
scraper = "0.14.0"
axum = "0.8.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tower = "0.5.2"

[dev-dependencies]
http-body-util = "0.1.2"
pretty_assertions = "1.4.1"
